force-app/main/default/objects/Announcement__c/fields/Announcements__c.field-meta.xml
<CustomField>
    <fullName>Announcements__c</fullName>
    <label>Announcements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>