force-app/main/default/objects/Announcement__c/fields/Location2__c.field-meta.xml
<CustomField>
    <fullName>Location2__c</fullName>
    <label>Location2</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>