force-app/main/default/objects/Announcement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Announcements__c</columns>
    <columns>Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>